Added logic to check winner, Drawn game logic pending

--- a/styles.css
+++ b/styles.css
@@ -89,3 +89,24 @@ body{
     height: calc(var(--mark-size)*.75);
     background-color: white;
 }
+.winnerSection{
+    position: fixed;
+    top:0;
+    bottom: 0;
+    left:0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 5rem;
+    color: white;
+}
+.restartBtn{
+    font-size: 3rem;
+    cursor: pointer;
+}
+.winnerSection.show{
+    display: flex;
+}
